// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface should add suites to root 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [
    Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [],
      "description": "test 2",
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "skip": false,
      "type": "suite",
      Symbol(isRunnable): true,
    },
  ],
  "description": "root",
  "parent": null,
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "skip": false,
  "type": "suite",
  Symbol(isRunnable): true,
  Symbol(isRoot): true,
}
`;

exports[`Interface should create skipped tests inside of suites 1`] = `
Test {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "description": "child 1",
  "fn": [Function],
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "test 5",
    "parent": Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "parent": null,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "skip": false,
      "type": "suite",
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "skip": true,
    "type": "suite",
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "skip": true,
  "type": "test",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create suites 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [],
  "description": "test 1",
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "root",
    "parent": null,
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "skip": false,
    "type": "suite",
    Symbol(isRunnable): true,
    Symbol(isRoot): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "skip": false,
  "type": "suite",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create tests inside of suites 1`] = `
Test {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "description": "child 1",
  "fn": [Function],
  "parent": Suite {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "children": Array [
      [Circular],
    ],
    "description": "test 4",
    "parent": Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "parent": null,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "skip": false,
      "type": "suite",
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": "pending",
    },
    "skip": true,
    "type": "suite",
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "skip": false,
  "type": "test",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should handle nested suites 1`] = `
Suite {
  "_events": Object {},
  "_eventsCount": 0,
  "_maxListeners": undefined,
  "children": Array [
    Suite {
      "_events": Object {},
      "_eventsCount": 0,
      "_maxListeners": undefined,
      "children": Array [
        Test {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "description": "test 1",
          "fn": [Function],
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "skip": false,
          "type": "test",
          Symbol(isRunnable): true,
        },
        Test {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "description": "test 2",
          "fn": [Function],
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "skip": false,
          "type": "test",
          Symbol(isRunnable): true,
        },
        Suite {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "children": Array [
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 1",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "skip": false,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 2",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "skip": false,
              "type": "test",
              Symbol(isRunnable): true,
            },
          ],
          "description": "component 1",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "skip": false,
          "type": "suite",
          Symbol(isRunnable): true,
        },
        Suite {
          "_events": Object {},
          "_eventsCount": 0,
          "_maxListeners": undefined,
          "children": Array [
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 1",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "skip": false,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Test {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "description": "test 2",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "skip": false,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Suite {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "children": Array [
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 1",
                  "fn": [Function],
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "skip": false,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 2",
                  "fn": [Function],
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "skip": false,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
              ],
              "description": "method 1",
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "skip": false,
              "type": "suite",
              Symbol(isRunnable): true,
            },
            Suite {
              "_events": Object {},
              "_eventsCount": 0,
              "_maxListeners": undefined,
              "children": Array [
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 1",
                  "fn": [Function],
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "skip": false,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
                Test {
                  "_events": Object {},
                  "_eventsCount": 0,
                  "_maxListeners": undefined,
                  "description": "test 2",
                  "fn": [Function],
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": "pending",
                  },
                  "skip": false,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
              ],
              "description": "method 2",
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": "pending",
              },
              "skip": false,
              "type": "suite",
              Symbol(isRunnable): true,
            },
          ],
          "description": "component 2",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": "pending",
          },
          "skip": false,
          "type": "suite",
          Symbol(isRunnable): true,
        },
      ],
      "description": "module",
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": "pending",
      },
      "skip": false,
      "type": "suite",
      Symbol(isRunnable): true,
    },
  ],
  "description": "root",
  "parent": null,
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": "pending",
  },
  "skip": false,
  "type": "suite",
  Symbol(isRunnable): true,
  Symbol(isRoot): true,
}
`;
